The company now can have more than one platform, and each platform will have own investigations, and reports